final update hopefully

--- a/about.html
+++ b/about.html
@@ -38,6 +38,8 @@ EMAIL: valdivit@uci.edu
                     <a class="dropdown-item" href="cpr.html">CPR</a>
                     <a class="dropdown-item" href="alcohol.html">Alcohol Poisoning</a>
                     <a class="dropdown-item" href="anxiety.html">Anxiety</a>
+                    <a class="dropdown-item" href="allergy.html">Allergic Reaction</a>
+                    <a class="dropdown-item" href="bleeding.html">Severe Bleeding</a>
                 </div>
         </li>
       <li class="nav-item">
