--- a/anxiety.html
+++ b/anxiety.html
@@ -38,6 +38,8 @@ EMAIL: valdivit@uci.edu
                     <a class="dropdown-item" href="cpr.html">CPR</a>
                     <a class="dropdown-item" href="alcohol.html">Alcohol Poisoning</a>
                     <a class="dropdown-item" href="anxiety.html">Anxiety</a>
+                    <a class="dropdown-item" href="allergy.html">Allergic Reaction</a>
+                    <a class="dropdown-item" href="bleeding.html">Severe Bleeding</a>
                 </div>
         </li>
       <li class="nav-item">
@@ -53,9 +55,14 @@ EMAIL: valdivit@uci.edu
     </ul>
     </nav>
 
-    <div class="container">
+    <div class="container" style="padding-top:20px;">
+        
+    <div class="row" style="align-content:center;">
+        <h4 style="padding-top:10px;">IF YOU ARE CURRENTLY IN AN EMERGENCY</h4> 
+        <a href="tel:911"><button type="button" class="btn btn-danger" style="margin-left:15px;">DIAL 911</button></a>
+    </div>
 
-    <h1 style="padding-top:25px;">Aniety/Panic Attacks</h1>
+    <h1 style="padding-top:25px;">Anxiety/Panic Attacks</h1>
     <p>
       Anxiety is <strong>not</strong> fiction. Anxiety is real. Panic is not made up. Owning, getting help to overcome, and learning to cope with your anxious feelings is critical to finally living your life and not simply existing.
     </p>
@@ -101,8 +108,10 @@ EMAIL: valdivit@uci.edu
       <br/>
       If these methods are not working, or you experience panic attacks often, visit the health center to speak with a therapist that can help you understand the triggers and solutions to your attacks.
     </p>
-    <a class="link" href="https://www.youtube.com/watch?v=V8wTyfKd-M0">Ways to Destress</a>
-    <a class="link" href="https://www.youtube.com/watch?v=vXZ5l7G6T2I">Breathing Technique during Panic Attack</a>
+        
+    <h1 style="padding-top:25px;">Video Tutorials</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/V8wTyfKd-M0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/vXZ5l7G6T2I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
     </div>
