--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ EMAIL: valdivit@uci.edu
                     <a class="dropdown-item" href="cpr.html">CPR</a>
                     <a class="dropdown-item" href="alcohol.html">Alcohol Poisoning</a>
                     <a class="dropdown-item" href="anxiety.html">Anxiety</a>
+                    <a class="dropdown-item" href="allergy.html">Allergic Reaction</a>
+                    <a class="dropdown-item" href="bleeding.html">Severe Bleeding</a>
                 </div>
         </li>
       <li class="nav-item">
@@ -89,7 +91,13 @@ EMAIL: valdivit@uci.edu
       <a href="./anxiety.html"><img src=./images/anxiety.jpg class="sol"></a
     </div>
 -->
-    <div class="container">
+    <div class="container" style="padding-top:20px;">
+        
+    <div class="row" style="align-content:center;">
+        <h4 style="padding-top:10px;">IF YOU ARE CURRENTLY IN AN EMERGENCY</h4> 
+        <a href="tel:911"><button type="button" class="btn btn-danger" style="margin-left:15px;">DIAL 911</button></a>
+    </div>
+        
       <h1 style="padding-top:25px;">Built and Maintained by the Team at Healthful</h1>
       <h2 style="padding-top:25px;">Our Mission</h2>
       <p>
