--- a/alcohol.html
+++ b/alcohol.html
@@ -38,6 +38,8 @@ EMAIL: valdivit@uci.edu
                     <a class="dropdown-item" href="cpr.html">CPR</a>
                     <a class="dropdown-item" href="alcohol.html">Alcohol Poisoning</a>
                     <a class="dropdown-item" href="anxiety.html">Anxiety</a>
+                    <a class="dropdown-item" href="allergy.html">Allergic Reaction</a>
+                    <a class="dropdown-item" href="bleeding.html">Severe Bleeding</a>
                 </div>
         </li>
       <li class="nav-item">
@@ -53,7 +55,12 @@ EMAIL: valdivit@uci.edu
     </ul>
     </nav>
 
-    <div class="container">
+    <div class="container" style="padding-top:20px;">
+        
+    <div class="row" style="align-content:center;">
+        <h4 style="padding-top:10px;">IF YOU ARE CURRENTLY IN AN EMERGENCY</h4> 
+        <a href="tel:911"><button type="button" class="btn btn-danger" style="margin-left:15px;">DIAL 911</button></a>
+    </div>
 
     <h1 style="padding-top:25px;">Alcohol Poisoning</h1>
     <h2 style="padding-top:15px;">Symptoms of Alcohol Poisoning</h2>
@@ -98,7 +105,9 @@ EMAIL: valdivit@uci.edu
       <br/>
       7. Do not leave person alone and  do not let the person sleep it off. Be ready to perform CPR if needed.
     </p>
-    <a class="link" href="https://www.youtube.com/watch?v=UqY7DZ46prA">Video</a>
+        
+    <h1 style="padding-top:25px;">Video Tutorials</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/UqY7DZ46prA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
     </div>
